--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Portfolio Insights</title>
-    <meta name="viewport" content="width=device-width">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="bundle.js"></script>
-  </body>
+
+<head>
+  <title>Unicorn React</title>
+  <meta name="viewport" content="width=device-width">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="bundle.js"></script>
+</body>
+
 </html>
