--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,6 +4,12 @@
 <head>
   <title>Unicorn React</title>
   <meta name="viewport" content="width=device-width">
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 </head>
 
 <body>
